@@ -1732,16 +1732,11 @@ argument_list|)
 decl_stmt|;
 annotation|@
 name|BeforeClass
-annotation|@
-name|SuppressWarnings
-argument_list|(
-literal|"unused"
-argument_list|)
-DECL|method|beforeClass
-specifier|private
+DECL|method|setupTestCases
+specifier|public
 specifier|static
 name|void
-name|beforeClass
+name|setupTestCases
 parameter_list|()
 block|{
 name|initCoreDataDir
@@ -1874,16 +1869,11 @@ block|}
 block|}
 annotation|@
 name|AfterClass
-annotation|@
-name|SuppressWarnings
-argument_list|(
-literal|"unused"
-argument_list|)
-DECL|method|afterClass
-specifier|private
+DECL|method|teardownTestCases
+specifier|public
 specifier|static
 name|void
-name|afterClass
+name|teardownTestCases
 parameter_list|()
 throws|throws
 name|Exception
